[metadata]
name = mlflow-export-import
author = Andre M
description = MLflow export/import experiments, runs or registered models
url = https://github.com/amesar/mlflow-export-import
version = attr: mlflow_export_import._version.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    mlflow>=1.15.0
    click

[options.extras_require]
test =
    pytest==5.3.5

[options.packages.find]
exclude =
    tests
    docs
    databricks_notebooks
    samples

[options.entry_points]
console_scripts =
    mlflow-export-import = mlflow_export_import._cli:cli
